@@ -1,6 +1,7 @@
 package com.dk.algoDaily;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class Day20_RemoveDuplicatesFromArray {
@@ -17,7 +18,7 @@ public class Day20_RemoveDuplicatesFromArray {
     }
 
     public static void main(String... args) {
-        List<Integer> arr = new ArrayList<>(List.of(4, 3, 1, 2, 1, 2));
+        List<Integer> arr = new ArrayList<>(Arrays.asList(4, 3, 1, 2, 1, 2));
         System.out.println(removeDuplicates(arr));
     }
 }
